# Zero-Server-Ai-Privacy-Gateway

./: .gitignore  LICENSE  README.md  package.json  structure.txt
core/: CMakeLists.txt  build.ps1  build.sh
core/src/: main.cpp  sanitizer.cpp  sanitizer.h
extension/: manifest.json  service-worker.js
extension/assets/: engine.js  engine.wasm
extension/audit/: audit.html  audit.js
extension/background/: service-worker.js
extension/content/: content.js  feedbackPopup.js  inject.js
extension/data/: blockedPhrases.js  commonNames.js  ignoreWords.js  learnedWords.js  technicalPhrases.js
extension/popup/: popup.html  popup.js
extension/security/: attestation.js  vault.js
extension/utils/: benchmark.js  fakeGenerator.js  mapper.js  preSanitize.js
extension/worker/: sanitizer.worker.js
